#137 Add CORS configuration

--- a/api-service/src/main/resources/application.yml
+++ b/api-service/src/main/resources/application.yml
@@ -28,7 +28,7 @@ graphql:
   servlet:
     mapping: /graphql
     enabled: true
-    corsEnabled: true
+    corsEnabled: false
 graphiql:
   mapping: /graphiql
   enabled: true
