#137 Add UI module (#138)
* #137 Bump up version
* #137 Add empty Angular module
* #137 Add apollo graphql libraries
* #137 Update karma tests
* #137 Rename guery 'info' to 'version'
* #137 Rename GraphQL queries
* #137 Configure gateway route for api-service
* #137 Add CORS configuration

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -7,13 +7,29 @@ spring:
     import: optional:configserver:http://localhost:9900
   cloud:
     gateway:
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            allowedOrigins: "http://localhost:4200"
+            allowedHeaders:
+              - content-type
+            allowedMethods:
+              - GET
+              - POST
       routes:
         - id: query-service
           uri: lb://QUERY-SERVICE
           predicates:
-          - Path=/query-service/**
+            - Path=/query-service/**
           filters:
-          - RewritePath=/query-service/(?<segment>.*), /$\{segment}
+            - RewritePath=/query-service/(?<segment>.*), /$\{segment}
+        - id: api-service
+          uri: lb://API-SERVICE
+          predicates:
+            - Path=/api
+            - Method=GET,POST,OPTIONS
+          filters:
+            - RewritePath=/api, /graphql
 eureka:
   client:
     register-with-eureka: false
