--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webapp",
-  "version": "0.0.0",
+  "version": "0.55-SNAPSHOT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
