--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -5,6 +5,11 @@ spring:
     name: gateway-service
   config:
     import: optional:configserver:http://localhost:9900
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
   cloud:
     gateway:
       globalcors:
@@ -30,6 +35,11 @@ spring:
             - Method=GET,POST,OPTIONS
           filters:
             - RewritePath=/api, /graphql
+    stream:
+      rabbit:
+        default:
+          consumer:
+            anonymousGroupPrefix: ${spring.application.name}-${server.port}.
 eureka:
   client:
     register-with-eureka: false
