--- a/command-service/src/main/resources/application.yml
+++ b/command-service/src/main/resources/application.yml
@@ -59,3 +59,6 @@ spring:
           scheduleGameCommandHandler-in-0.consumer.bindingRoutingKey: ScheduleGameCommand
           completeGameCommandHandler-in-0.consumer.bindingRoutingKey: CompleteGameCommand
           commandQuery-out-0.producer.routingKeyExpression: headers['type']
+        default:
+          consumer:
+            anonymousGroupPrefix: ${spring.application.name}-${server.port}.
