#140 Update docker config

--- a/config-service/Dockerfile
+++ b/config-service/Dockerfile
@@ -1,3 +1,6 @@
 FROM openjdk:11-jdk
+RUN apt-get update && apt-get install -y netcat
 ADD build/libs/config-service*.jar config-service.jar
-ENTRYPOINT ["java", "-jar", "/config-service.jar"]
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
