--- a/config-service/src/main/resources/config/docker/discovery-service.yml
+++ b/config-service/src/main/resources/config/docker/discovery-service.yml
@@ -1,3 +1,9 @@
+spring:
+  rabbitmq:
+    host: rabbitmq
+    port: 5672
+    username: guest
+    password: guest
 eureka:
   server:
     maxThreadsForPeerReplication: 0
