#181 GraphQL playerCreated subscription (#183)
* #181 Bump up version
* #181 Unify RabbitMQ exchange name to 'RankMe'
* #181 Add playerCreated subscription
* #181 Update unit tests
* #181 Add playerCreated subscription integration test
* #181 Reorganize graphql resource test files
* #181 Update spring cloud configuration in query-service

--- a/api-service/src/main/resources/application.yml
+++ b/api-service/src/main/resources/application.yml
@@ -11,15 +11,21 @@ spring:
     username: guest
     password: guest
   cloud:
+    function:
+      definition: playerCreatedFlux
     stream:
       bindings:
-        apiCommand-out-0:
-          destination: api.command
+        commands-out-0:
+          destination: RankMe
+        playerCreatedFlux-in-0:
+          destination: RankMe
+          group: api-player-created
       rabbit:
         bindings:
-          apiCommand-out-0:
+          commands-out-0:
             producer:
               routingKeyExpression: headers['type']
+          playerCreatedFlux-in-0.consumer.bindingRoutingKey: player-created
         default:
           consumer:
             anonymousGroupPrefix: ${spring.application.name}-${server.port}.
