#193 Increase memory in gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,4 @@ systemProp.sonar.projectKey=tomek199_RankMe
 systemProp.sonar.organization=tomek199
 
 kotlin.code.style=official
+org.gradle.jvmargs=-Xmx2048M
