--- a/subscription-service/src/main/resources/application.yml
+++ b/subscription-service/src/main/resources/application.yml
@@ -17,10 +17,12 @@ spring:
       bindings:
         playerCreatedFlux-in-0:
           destination: RankMe
-          group: subscriber-player-created
       rabbit:
         bindings:
-          playerCreatedFlux-in-0.consumer.bindingRoutingKey: query-player-created
+          playerCreatedFlux-in-0:
+            consumer:
+              bindingRoutingKey: query-player-created
+              anonymousGroupPrefix: player-created-subscriber-
         default:
           consumer:
             anonymousGroupPrefix: ${spring.application.name}-${server.port}.
