#201 Use subscription in player-list component (#203)
* #201 Bump up version
* #201 Add subscription handler
* #201 Update player-created subscription
* #201 Fix player-created subscription producer
* #201 Handle player-created subscription

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webapp",
-  "version": "0.81-SNAPSHOT",
+  "version": "0.82-SNAPSHOT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -24,6 +24,7 @@
     "apollo-angular": "^4.1.0",
     "graphql": "^16.6.0",
     "rxjs": "~7.5.7",
+    "subscriptions-transport-ws": "^0.11.0",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.8"
   },
